Meteor logic and sample.json
Meteor maketree app logic and tree json format.

--- a/makeTree/makeTree.html
+++ b/makeTree/makeTree.html
@@ -4,6 +4,7 @@
 
 <body>
   {{> hello}}
+  {{> resultArea}}
   {{> getUrlParam }}
 </body>
 
@@ -15,5 +16,9 @@
 
 <template name="getUrlParam">
   {{geturl}}
+</template>
+
+<template name="resultArea">
+  {{urls}}
 </template>
 
