--- a/makeTree/makeTree.html
+++ b/makeTree/makeTree.html
@@ -3,23 +3,24 @@
 </head>
 
 <body>
-  <div class='offset4' style='margin-top:100px;'>
+  <div class='offset4' style='margin-top:10px;' name="content">
   {{> hello}}
-  {{> getUrlParam }}
   </div>
+  <br>
 </body>
 
 <template name="hello">
   <h1>Making Tree</h2>
   {{greeting}}
   <br><br>
+  <div class="progress progress-striped active span2" >
+    <div class="bar" style="width:0%" id="progress"></div>
+  </div>
+  <br><br>
   <input type="button" value="Click" id="start"/>
   <input type="text" size="30" id="mainURL"/>
-  {{display_tree}}
+  <br>
 </template>
 
-<template name="getUrlParam">
-  {{geturl}}
-</template>
 
 
