tree + position ( js , html )

--- a/sea/sea/tree.html
+++ b/sea/sea/tree.html
@@ -9,32 +9,26 @@
 <script type="text/javascript" src="js/Stats.js"></script>
 <script type="text/javascript" src="js/Detector.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
-<script type="text/javascript" src="js/coil.js"></script>
+<script type="text/javascript" src="js/bane.js"></script>
+<link rel="stylesheet" href="css/style.css" type="text/css"/>
 <!-- <script type="text/javascript" src="js/json.js"></script> -->
 <style type="text/css">
-div#canvas-frame{
-	margin: auto;
-	border: none;
-	cursor: pointer;
-	width: 1600px;
-	height: 800px;
-	background-color: #ffffff;
-}
+
 </style>
 
 </head>
 
 
-<!--  ÉãÉpÉìÇÃ -->
+<!--  ÉãÉpÉìÇÃ 
 <body onload="threeStart();">
 <div id="canvas-frame"></div>
+-->
 
 
-
-<!--  äCÇ≠ÇÒÇÃ
+<!--  äCÇ≠ÇÒÇÃ -->
 <body>
 	<canvas class="spring" width="800" height="400"></canvas>
- -->	
+	
 	<div>
 		xç¿ã∆ÇÕ<span id="X"></span><br>
 		yç¿ïWÇÕ<span id="Y"></span><br>
