--- a/addPosition/tree.html
+++ b/addPosition/tree.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="js/Stats.js"></script>
 <script type="text/javascript" src="js/Detector.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
-<script type="text/javascript" src="js/coilTree.js"></script>
+<script type="text/javascript" src="js/bane.js"></script>
 <link rel="stylesheet" href="css/style.css" type="text/css"/>
 <!-- <script type="text/javascript" src="js/json.js"></script> -->
 <style type="text/css">
