--- a/circle/circle/circle.html
+++ b/circle/circle/circle.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="js/Three.js"></script>
 <script type="text/javascript" src="js/Stats.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/bane.js"></script>
 <style type="text/css">
 div#canvas-frame{
 	margin: auto;
